[tool.poetry]
name = "cf-dyndns"
version = "1.0.1"
description = ""
authors = ["Marius Meschter <marius.meschter@univention.de>"]
readme = "README.md"
packages = [{include = "cf_dyndns"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.280"
black = "^23.7.0"
pyright = "^1.1.318"

[tool.poetry.scripts]
cf_dyndns = 'cf_dyndns.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "F",
    "I",
    "W",
    "C",
    "B",
    "N",
    "UP",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "C4",
    "DTZ",
    "EM",
    "FA100",
    "ICN",
    "G",
    "INP",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "PTH",
    "PL",
    "RUF",
    "PERF",
    "TRY",
]
ignore = [
    "E501",
    "RET502",
    "F401", # caught by pyright
]

[tool.pyright]
strict = true