[project]
name = "cf-dyndns"
version = "1.1.2"
description = ""
authors = [
    {name = "Marius Meschter", email = "marius@meschter.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[brotli,http2]~=0.27.2",
    "pydantic>=2.9",
]

[project.scripts]
dnsupdate = "cf_dyndns:main.main"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["Q000", "Q003", "COM812", "ISC001", "ANN", "INP001", "D"]

[tool.ruff.lint.isort]
case-sensitive = true
combine-as-imports = true
lines-after-imports = 1

[tool.ruff]
line-length = 100
required-version = ">=0.5.0"
